test/corpus/basic.txt
====
Empty
====

---
(source_file)

====
Namespaced variable assignment
====

process = ::foo::bar::baz;

---
(source_file
  (definition
    (identifier)
    (identifier)))


====
Function definition
====

identity(var) = var;
identity ( var ) = var ;

---
(source_file
  (definition
    (identifier)
    (parameter)
    (identifier))
  (definition
    (identifier)
    (parameter)
    (identifier)))

====
String
====

process = "a\"\n\r!@#$%^&*(),<.>?/~`{}\|\';:";

---
(source_file
  (definition
    (identifier)
    (string)))

====
Import
====

import("stdfaust.lib");
import ( "stdfaust.lib" ) ;
---
(source_file
  (file_import
    (string))
  (file_import
    (string)))
