test/corpus/binary.txt
=====
Recursion
=====

process = _~+(1);

---
(source_file
  (definition
    (identifier)
    (recursive
      (wire)
      (function_call
        (operator)
        (args
          (argument
            (int)))))))

=====
Sequential
=====

a=_:_;

---
(source_file
  (definition
    name: (identifier)
    value: (sequential
      left: (wire)
      right: (wire))))

=====
Split two
=====

a=_<:_,_;

---
(source_file
  (definition
    (identifier)
    (split
      (wire)
      (parallel
        (wire)
        (wire)))))

=====
Split three
=====

a=_<:_,_,_;

---
(source_file
  (definition
    (identifier)
    (split
      (wire)
      (parallel
        (wire)
        (parallel
          (wire)
          (wire))))))

=====
Merge two
=====

a=_,_:>_;

---
(source_file
  (definition
    (identifier)
    (merge
      (parallel
        (wire)
        (wire))
      (wire))))

=====
Merge three
=====

a=_,_,_:>_;

---
(source_file
  (definition
    (identifier)
    (merge
      (parallel
        (wire)
        (parallel
          (wire)
          (wire)))
      (wire))))
