test/corpus/number.txt
====
Int
====

process = 1,+10,-100;

---
(source_file
  (definition
    (identifier)
    (parallel
      (int)
      (parallel
        (int)
        (int)))))

====
Real
====

process = 0.5,.5,5.,+1.,-1.f,500.5e4,-500e40f;

---
(source_file
  (definition
    (identifier)
    (parallel
      (real)
      (parallel
        (real)
        (parallel
          (real)
          (parallel
            (real)
            (parallel
              (real)
              (parallel
                (real)
                (real)))))))))
